--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 astroid==2.0.4
 backcall==0.1.0
 bleach==2.1.4
+certifi==2018.8.24
+chardet==3.0.4
+conda==4.3.16
 cycler==0.10.0
 decorator==4.3.0
 entrypoints==0.2.3
 html5lib==1.0.1
+idna==2.7
 ipykernel==4.8.2
 ipython==6.5.0
 ipython-genutils==0.2.0
@@ -35,10 +39,13 @@ pandocfilters==1.4.2
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
+Pillow==5.2.0
 prometheus-client==0.3.1
 prompt-toolkit==1.0.15
 psycopg2==2.7.5
+psycopg2-binary==2.7.5
 ptyprocess==0.6.0
+pycosat==0.6.3
 Pygments==2.2.0
 pylint==2.1.1
 pyparsing==2.2.0
@@ -46,7 +53,11 @@ python-dateutil==2.7.3
 pytz==2018.5
 pyzmq==17.1.2
 qtconsole==4.4.1
+requests==2.19.1
+ruamel.yaml==0.15.61
 scikit-learn==0.19.2
+scipy==1.1.0
+seaborn==0.9.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
@@ -56,7 +67,9 @@ terminado==0.8.1
 testpath==0.3.1
 tornado==5.1
 traitlets==4.3.2
+urllib3==1.23
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.4.0
+wordcloud==1.5.0
 wrapt==1.10.11
